[package]
name = "stable_toposort"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

description = "Deterministic and stable topological sorting algorithms"
license = "MIT OR Apache-2.0"

readme = "README.md"
homepage = "https://github.com/maxvog2020/rust_stable_toposort"
repository = "https://github.com/maxvog2020/rust_stable_toposort"

keywords = ["toposort", "graph", "dag", "algorithm"]
categories = ["algorithms"]

[dependencies]
